<resources>
    <string name="app_name">Ongaku</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="totalsongs">Total Songs</string>
    <string name="header">Now playing</string>
    <string name="songname">Song Name</string>
    <string name="backbtn">back</string>
    <string name="start">00:00</string>
    <string name="end">Loading</string>
    <string name="repeat">Repeat</string>
    <string name="equalizer">Equalizer</string>
    <string name="share">Share</string>
    <string name="favourites">Favourites</string>
    <string name="playlist">Playlist</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="text_nav">"Welcome to ongaku "</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="Album">Album</string>
    <string name="search_view">Search View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlistname">Playlist Name</string>
    <string name="delbtnpv">delbtnPV</string>
    <string name="playlistcreatedby">Playlist Created By</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
</resources>