<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity = "center"
    android:id="@+id/playeractivitylayout"

    >

    <!-- First Row -->


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008">

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/backbtn"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/teal_200" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/header"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/equilizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equalizer"
            android:paddingRight="10dp"
            android:src="@drawable/ic_baseline_equalizer_24" />

    </LinearLayout>

    <!-- Curr song image-->


    <!-- Curr song name-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toTopOf="@+id/songnamepa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.307"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/rl"
        >

        <ImageView
            android:id="@+id/songimagepa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/love_song"
            />

        <ImageView
            android:id="@+id/gradiengbgforsongimg"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/gradient"
 />
    </RelativeLayout>

    <!-- seekbar-->

    <TextView
        android:id="@+id/songnamepa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/songname"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl"
        app:layout_constraintVertical_bias="0.699" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songnamepa"
        app:layout_constraintVertical_bias="0.293">


        <ImageButton
            android:id="@+id/sharebtnpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_baseline_share_24" />

        <ImageButton
            android:id="@+id/favbtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourites_btn"
            android:paddingRight="10dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:tint="#E91E63" />


        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat"
            android:src="@drawable/ic_baseline_repeat_24" />

        <Button
            android:id="@+id/lyrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/songlyrics"
            android:text="Lyrics"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.608">


        <TextView
            android:id="@+id/tvseekbarstart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="529dp" />


        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarPA"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="554dp" />

        <TextView
            android:id="@+id/tvseekendtime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/end"
            android:textColor="@color/white"
            android:textSize="15sp"

            />



    </LinearLayout>

    <!-- Last Row -->
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- share button -->


        <!-- previous button -->
        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_skip_previous_24" />

        <!-- pause button -->


        <ImageButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_play_arrow_24"

            />

        <!-- next button -->
        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_skip_next_24"

            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>